--- a/.settings/com.appcelerator.titanium.android.core.prefs
+++ b/.settings/com.appcelerator.titanium.android.core.prefs
@@ -1,11 +1,21 @@
 android/ATTR_MINIFY=true
-android/ATTR_PROJECT_NAME=BetKampen
+android/ATTR_MINIFY.type=Boolean
+android/ATTR_PROJECT_NAME=betbattle
+android/ATTR_PROJECT_NAME.type=String
 android/abi=armeabi-v7a
-android/distribute_path=/Users/Svempa/Downloads
-android/key_password=Betkampen2014
-android/keystore_alias=betkampen
-android/keystore_password=Betkampen2014
-android/keystore_path=/Users/Svempa/android.keystore
-android/recent_output=/Users/Svempa/Downloads
+android/abi.type=String
+android/distribute_path=C\:\\Users\\Giaco\\Desktop
+android/distribute_path.type=String
+android/key_password=
+android/key_password.type=String
+android/keystore_alias=PalmaTech
+android/keystore_alias.type=String
+android/keystore_password=DarkSouls1234
+android/keystore_password.type=String
+android/keystore_path=C\:\\Users\\Giaco\\Desktop\\PalmaTech\\AngrySharks\\keystore
+android/keystore_path.type=String
+android/recent_output=C\:\\Users\\Giaco\\Desktop
+android/recent_output.type=String
 android/sdk_version=4.1.2
+android/sdk_version.type=String
 eclipse.preferences.version=1
