--- a/app/config.json
+++ b/app/config.json
@@ -1,5 +1,8 @@
 {
-	"global": {}, 
+	"global": {
+		"theme":"lakers",
+		"autoStyle":true
+	}, 
 	"env:development": {}, 
 	"env:test": {}, 
 	"env:production": {}, 
