--- a/.gitignore
+++ b/.gitignore
@@ -17,3 +17,41 @@ Resources/iphone/alloy/controllers/registerView.js
 Resources/iphone/alloy/controllers/store.js
 
 Resources/iphone/alloy/styles/login.js
+
+Resources/iphone/alloy/controllers/groupSelect.js
+
+Resources/iphone/alloy/controllers/challengesView.js
+
+Resources/iphone/alloy/controllers/challenge.js
+
+Resources/iphone/alloy/controllers/landingPage.js
+
+Resources/iphone/alloy/controllers/login.js
+
+Resources/iphone/alloy/controllers/newChallenge.js
+
+Resources/iphone/alloy/controllers/profile.js
+
+Resources/iphone/alloy/styles/main.js
+
+Resources/iphone/alloy/styles/menurow.js
+
+Resources/iphone/alloy/styles/menuview.js
+
+Resources/iphone/alloy/styles/newChallenge.js
+
+Resources/iphone/alloy/styles/newChallengeLeague.js
+
+Resources/iphone/alloy/styles/profile.js
+
+Resources/iphone/alloy/styles/registerView.js
+
+Resources/iphone/alloy/styles/store.js
+
+Resources/iphone/alloy/styles/settings.js
+
+Resources/iphone/alloy/styles/terms.js
+
+Resources/iphone/alloy/styles/topplistan.js
+
+Resources/iphone/app.js
