--- a/.gitignore
+++ b/.gitignore
@@ -55,3 +55,61 @@ Resources/iphone/alloy/styles/terms.js
 Resources/iphone/alloy/styles/topplistan.js
 
 Resources/iphone/app.js
+
+Resources/android/alloy/controllers/challenge.js
+
+Resources/android/alloy/controllers/challengesView.js
+
+Resources/android/alloy/controllers/landingPage.js
+
+Resources/android/alloy/controllers/groupSelect.js
+
+Resources/android/alloy/controllers/login.js
+
+Resources/android/alloy/controllers/main.js
+
+Resources/android/alloy/controllers/newChallenge.js
+
+Resources/android/alloy/controllers/profile.js
+
+Resources/android/alloy/controllers/registerView.js
+
+Resources/android/alloy/controllers/store.js
+
+Resources/android/alloy/models/Facebook.js
+
+Resources/android/alloy/styles/landingPage.js
+
+Resources/android/alloy/styles/login.js
+
+Resources/android/alloy/styles/main.js
+
+Resources/android/alloy/styles/menurow.js
+
+Resources/android/alloy/styles/menuview.js
+
+Resources/android/alloy/styles/newChallenge.js
+
+Resources/android/alloy/styles/newChallengeLeague.js
+
+Resources/android/alloy/styles/profile.js
+
+Resources/android/alloy/styles/registerView.js
+
+Resources/android/alloy/styles/settings.js
+
+Resources/android/alloy/styles/store.js
+
+Resources/android/alloy/styles/terms.js
+
+Resources/android/alloy/styles/topplistan.js
+
+Resources/android/app.js
+
+Resources/android/images/Default-Portrait.png
+
+Resources/android/images/header.png
+
+Resources/android/images/m.png
+
+Resources/android/images/p.png
