--- a/.gitignore
+++ b/.gitignore
@@ -133,3 +133,5 @@ Resources/iphone/alloy/controllers/login.js
 app/styles/loginView.tss
 
 app/controllers/registerView.js
+
+Resources/iphone/app.js
