--- a/.gitignore
+++ b/.gitignore
@@ -226,3 +226,7 @@ Resources/android/alloy/styles/index.js
 Resources/android/alloy/widgets/ds.slideMenu/styles/widget.js
 
 Resources/iphone/alloy/controllers/landingPage.js
+
+Resources/iphone/alloy/controllers/topplistan.js
+
+Resources/android/alloy/controllers/topplistan.js
