--- a/.gitignore
+++ b/.gitignore
@@ -230,3 +230,5 @@ Resources/iphone/alloy/controllers/landingPage.js
 Resources/iphone/alloy/controllers/topplistan.js
 
 Resources/android/alloy/controllers/topplistan.js
+
+Resources/android/lib/FontAwesome.js
