--- a/.gitignore
+++ b/.gitignore
@@ -236,3 +236,9 @@ Resources/android/lib/FontAwesome.js
 Resources/android/alloy/controllers/settings.js
 
 Resources/iphone/alloy/controllers/settings.js
+
+Resources/android/lib/push_notifications_apns.js
+
+Resources/android/alloy/controllers/settings.js
+
+Resources/android/alloy/controllers/friendSelect.js
