--- a/.settings/com.appcelerator.titanium.ios.core.prefs
+++ b/.settings/com.appcelerator.titanium.ios.core.prefs
@@ -2,9 +2,9 @@ eclipse.preferences.version=1
 iosLaunchConfigurationAttributes/ATTR_MINIFY=true
 iosLaunchConfigurationAttributes/ATTR_PROJECT_NAME=betbattle
 iosLaunchConfigurationAttributes/appid=apps.topgame.betkampen
-iosLaunchConfigurationAttributes/certificate=Robert Skogh (G8P3JA3H7N)
-iosLaunchConfigurationAttributes/distribute_path=/Users/Svempa/Downloads/Betkampen/exe
+iosLaunchConfigurationAttributes/certificate=Topgame AB (WA424AJXKV)
+iosLaunchConfigurationAttributes/distribute_path=/Users/sashe/Desktop
 iosLaunchConfigurationAttributes/keychain=/Users/sashe/Library/Keychains/login.keychain
-iosLaunchConfigurationAttributes/output_format=ipa
+iosLaunchConfigurationAttributes/output_format=archive
 iosLaunchConfigurationAttributes/sdk_version=7.1
-iosLaunchConfigurationAttributes/uuid=F1B6602E-563B-4279-AFE5-ABDEBD6BA6B7
+iosLaunchConfigurationAttributes/uuid=BCD1191B-0A3E-40A7-A180-F90D0C3151A6
