massa hårdkodat, fixar och toastupdate

--- a/.gitignore
+++ b/.gitignore
@@ -250,3 +250,5 @@ Resources/android/lib/push_notifications_apns.js
 Resources/iphone/alloy/controllers/groupSelect.js
 
 Resources/iphone/alloy/controllers/settings.js
+
+Resources/iphone/alloy/controllers/groupSelect.js
