--- a/.gitignore
+++ b/.gitignore
@@ -252,3 +252,5 @@ Resources/iphone/alloy/controllers/groupSelect.js
 Resources/iphone/alloy/controllers/settings.js
 
 Resources/iphone/alloy/controllers/groupSelect.js
+
+Resources/iphone/alloy/controllers/groupSelect.js
