--- a/.gitignore
+++ b/.gitignore
@@ -254,3 +254,5 @@ Resources/iphone/alloy/controllers/settings.js
 Resources/iphone/alloy/controllers/groupSelect.js
 
 Resources/iphone/alloy/controllers/groupSelect.js
+
+Resources/iphone/alloy/widgets/danielhanold.pickerWidget/controllers/widget.js
