--- a/.settings/com.appcelerator.titanium.ios.core.prefs
+++ b/.settings/com.appcelerator.titanium.ios.core.prefs
@@ -3,8 +3,8 @@ iosLaunchConfigurationAttributes/ATTR_MINIFY=true
 iosLaunchConfigurationAttributes/ATTR_PROJECT_NAME=BetKampen
 iosLaunchConfigurationAttributes/appid=apps.topgame.betkampen
 iosLaunchConfigurationAttributes/certificate=Topgame AB (WA424AJXKV)
-iosLaunchConfigurationAttributes/distribute_path=/Users/Svempa/Downloads/Betkampen/exe
-iosLaunchConfigurationAttributes/keychain=
+iosLaunchConfigurationAttributes/distribute_path=/Users/Svempa/Downloads/BetBattle/new/exe
+iosLaunchConfigurationAttributes/keychain=/Library/Keychains/System.keychain
 iosLaunchConfigurationAttributes/output_format=ipa
 iosLaunchConfigurationAttributes/sdk_version=8.1
-iosLaunchConfigurationAttributes/uuid=91AC3F92-BA08-4AE5-A451-E4F2E5E83C7D
+iosLaunchConfigurationAttributes/uuid=d22e6aec-eafe-48eb-97d8-888ec1e87a65
