--- a/.settings/com.appcelerator.titanium.android.core.prefs
+++ b/.settings/com.appcelerator.titanium.android.core.prefs
@@ -2,8 +2,10 @@ android/ATTR_MINIFY=true
 android/ATTR_MINIFY.type=Boolean
 android/ATTR_PROJECT_NAME=BetKampen
 android/ATTR_PROJECT_NAME.type=String
-android/abi=mips
+android/abi=armeabi-v7a
 android/abi.type=String
+android/device-id=
+android/device-id.type=String
 android/distribute_path=/Users/Svempa/Downloads
 android/distribute_path.type=String
 android/key_password=Betkampen2014
@@ -16,6 +18,6 @@ android/keystore_path=/Users/Svempa/android.keystore
 android/keystore_path.type=String
 android/recent_output=/Users/Svempa/Downloads
 android/recent_output.type=String
-android/sdk_version=4.1.2
+android/sdk_version=5.0.1
 android/sdk_version.type=String
 eclipse.preferences.version=1
